Avoid cropping on short screens

--- a/style.css
+++ b/style.css
@@ -16,5 +16,6 @@ h3 {
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
 }
